; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb3/extr_ael1002.c_t3_xaui_direct_phy_prep.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb3/extr_ael1002.c_t3_xaui_direct_phy_prep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cphy = type { i32 }
%struct.adapter = type { i32 }
%struct.mdio_ops = type { i32 }

@xaui_direct_ops = common dso_local global i32 0, align 4
@SUPPORTED_10000baseT_Full = common dso_local global i32 0, align 4
@SUPPORTED_AUI = common dso_local global i32 0, align 4
@SUPPORTED_TP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"10GBASE-CX4\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @t3_xaui_direct_phy_prep(%struct.cphy* %0, %struct.adapter* %1, i32 %2, %struct.mdio_ops* %3) #0 {
  %5 = alloca %struct.cphy*, align 8
  %6 = alloca %struct.adapter*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.mdio_ops*, align 8
  store %struct.cphy* %0, %struct.cphy** %5, align 8
  store %struct.adapter* %1, %struct.adapter** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.mdio_ops* %3, %struct.mdio_ops** %8, align 8
  %9 = load %struct.cphy*, %struct.cphy** %5, align 8
  %10 = load %struct.adapter*, %struct.adapter** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load %struct.mdio_ops*, %struct.mdio_ops** %8, align 8
  %13 = load i32, i32* @SUPPORTED_10000baseT_Full, align 4
  %14 = load i32, i32* @SUPPORTED_AUI, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* @SUPPORTED_TP, align 4
  %17 = or i32 %15, %16
  %18 = call i32 @cphy_init(%struct.cphy* %9, %struct.adapter* %10, i32 %11, i32* @xaui_direct_ops, %struct.mdio_ops* %12, i32 %17, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @cphy_init(%struct.cphy*, %struct.adapter*, i32, i32*, %struct.mdio_ops*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
